Add api search (#10)
New endpoints:
/apis => All APis
/search?query => Searched Apis
