# src/main/resources/swagger.yml
@@ -147,6 +147,52 @@ paths:
               schema:
                 $ref: "#/components/schemas/Api"
 
+  /apis:
+    get:
+      summary: Retreive All APIs or search by keywords
+      operationId: get-apis-query
+      tags:
+        - APIs
+      responses:
+        '201':
+          description: List of Apis
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiList"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /apis/search:
+      get:
+        summary: Retreive All APIs or search by keywords
+        operationId: get-apis-query
+        tags:
+          - APIs
+        parameters:
+        - name: query
+          in: query
+          required: false
+          description: search string containing keywords
+          schema:
+            type: string
+        responses:
+          '201':
+            description: List of Apis
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/ApiList"
+          default:
+            description: unexpected error
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/Error"
+
   /apis/{apiId}:
     parameters:
       - name: apiId
